--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <b>WP Pusher</b> solves that issue,
                 and the customer support is awesome!</p>
               <div class="beard__kirk">
-                <img src="public/images/bitmap.png" alt="beard" width="40px" height="40px">
+                <img src="images/bitmap.png" alt="beard" width="40px" height="40px">
                 <h5>Kirk Beard</h5>
               </div> 
             </div>
